--- a/style.css
+++ b/style.css
@@ -135,3 +135,12 @@ a{
     text-align: end;
     margin-top:10rem ;
 }
+#projectfooter{
+    display: block;
+    text-align: end;
+    margin-top: 40vh;
+    font-size: 1.5rem;
+}
+li{
+    margin: 1rem;
+}
